<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".views.EditarLivroActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_book"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/t_tulo"
        style="?android:attr/textAppearanceMedium"
        />

    <EditText
        android:id="@+id/edt_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/autor"
        style="?android:attr/textAppearanceMedium"
        />

    <EditText
        android:id="@+id/edt_autor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/editora"
        style="?android:attr/textAppearanceMedium"
        />

    <EditText
        android:id="@+id/edt_editora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:layout_marginTop="30dp"
        android:id="@+id/check_emprestado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emprestado"
        android:textStyle="bold"
        style="?android:attr/textAppearanceMedium"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelar"
            android:text="Cancelar" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="OK"
            android:onClick="processar"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>

</LinearLayout>