<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:id="@+id/cv"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <ImageView
                android:id="@+id/ic_livro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_book"/>
            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_tulo_do_livro"
                android:layout_toEndOf="@id/ic_livro"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:textColor="@color/colorPrimaryVariant"/>
            <ImageView
                android:id="@+id/ic_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star"
                android:layout_toEndOf="@id/txtTitulo"
                android:layout_alignParentTop="true"
                android:visibility="invisible" />
            <TextView
                android:id="@+id/txtAutor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autor_do_livro"
                android:layout_toEndOf="@id/ic_livro"
                android:layout_below="@id/txtTitulo"
                android:textColor="@color/colorPrimaryVariant"/>
            <TextView
                android:id="@+id/txtEditora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editora_do_livro"
                android:layout_toEndOf="@id/ic_livro"
                android:layout_below="@id/txtAutor"
                android:textColor="@color/colorPrimaryVariant"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>